--- a/login/base/templates/home.html
+++ b/login/base/templates/home.html
@@ -27,41 +27,41 @@
     <li>
       <a href="#">
         <i class="bx bxs-grid-alt"></i>
-        <span class="nav-item">Gestion de Tareas</span>
+        <span class="nav-item">Manage Tasks</span>
       </a>
-      <span class="tooltip">Gestion de Tareas</span>
+      <span class="tooltip">Manage Tasks</span>
     </li>
     <li>
       <a href="#">
         <i class="bx bxs-grid-alt"></i>
-        <span class="nav-item">Gestion de Usuarios</span>
+        <span class="nav-item">Manage Users</span>
       </a>
-      <span class="tooltip">Gestion de Usuarios</span>
+      <span class="tooltip">Manage Users</span>
     </li>
     <li>
       <a href="#">
         <i class="bx bxs-grid-alt"></i>
-        <span class="nav-item">Crear Nueva Tarea</span>
+        <span class="nav-item">Create New Task</span>
       </a>
-      <span class="tooltip">Crear Nueva Tarea</span>
+      <span class="tooltip">Create New Task</span>
     </li>
     <li>
       <a href="#">
         <i class="bx bxs-grid-alt"></i>
-        <span class="nav-item">Mis Tareas</span>
+        <span class="nav-item">My Tasks</span>
       </a>
-      <span class="tooltip">Mis Tareas</span>
+      <span class="tooltip">My Tasks</span>
     </li>
     <li>
       <form method="POST" action="{% url 'base:logout' %}" class="logout-form">
         {% csrf_token %}
-        <button type="submit" aria-label="Logout">Cerrar sesión</button>
+        <button type="submit" aria-label="Logout">Log out</button>
       </form>
-      <span class="tooltip">Cerrar sesion</span>
+      <span class="tooltip">Log out</span>
     </li>
   </ul>
 </div>
 {% comment %}
-<a href="{% url "base:logout" %}">Cerrar sesión</a>
+<a href="{% url "base:logout" %}">Log out</a>
 {% endcomment %}
 {% endblock content %}
