--- a/login/base/templates/registration/login.html
+++ b/login/base/templates/registration/login.html
@@ -9,11 +9,11 @@
 </head>
 <div class="shadow-wrap">
  <div class="form-wrap">
-  <h3>Inicio de Sesión</h3>
+  <h3>Log in</h3>
 <form method="POST">
  {% csrf_token %}
  {{form}}
- <button type="submit">Iniciar sesión</button>
+ <button type="submit">Log in</button>
 </form>
 </div>
 </div>
