--- a/login/base/templates/mis-tareas.html
+++ b/login/base/templates/mis-tareas.html
@@ -79,7 +79,7 @@
               <p class="card-text">Category: {{ mytask.category }}</p>
               <p class="card-text">Priority: Level {{ mytask.priority }}</p>
               <p class="card-text">Assigned to: {{ mytask.user.first_name }} {{ mytask.user.last_name }}</p>
-              <p class="card-text">Progress: {{ mytask.get_progress_display }}</p>
+              <p class="card-text">Progress: {{ mytask.progress}}</p>
             </div>
           </div>
         </div>
